welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:16: error: Unit does not take parameters
dogHouse() 
        ^MethodsDogHouse:22: error: Unit does not take parameters
		dogHouse();
                        ^MethodsDogHouse:28: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:38: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:48: error: Unit does not take parameters
		dogHouse();		
                        ^